--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 awkward==1.1.2
 Brotli==1.0.9
 click==7.1.2
+cycler==0.10.0
 dash==1.19.0
 dash-core-components==1.15.0
 dash-html-components==1.1.2
@@ -11,10 +12,14 @@ Flask-Compress==1.9.0
 future==0.18.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
+kiwisolver==1.3.1
 MarkupSafe==1.1.1
+matplotlib==3.3.4
 numpy==1.20.1
 pandas==1.2.3
+Pillow==8.1.2
 plotly==4.14.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 retrying==1.3.3
